Optimized version (#5)
Runtime and memory optimized version